@startuml

title Sensor of Power Consumption\nDomain Class Diagram - Component\nSystem / BackEnd / Domain\n(Implementation View Level 4)

/'
As Product Owner, I want the system to have a type of sensor that gives the
power consumption in a given instant (W).
'/

interface Sensor {
    + getIdentity() : SensorId
    + getSensorModelName() : SensorModelName
    + getValue() : Value
    + getDeviceId() : DeviceId
    + sameAs(Object): boolean
}

class SensorId{
    - sensorId : String
    + SensorId(...)
    + getSensorId() : String
    + sameAs(Object): boolean
}

interface Value{
    + valueToString() : String
}

class PowerConsumptionValue {
    - powerConsumptionValue : double
    + PowerConsumptionValue(double)
    + valueToString() : String
}

class SensorModelName{
    - sensorModelName : String
    + SensorModelName(...)
    + getSensorModelName() : String
    + sameAs(Object): boolean
}

class SensorType {
    + SensorType(...)
    + getIdentity() : SensorTypeId
    + getSensorTypeName() : SensorTypeName
    + getSensorTypeUnit() : SensorTypeUnit
    + sameAs(Object): boolean
}

class SensorTypeName{
    - sensorTypeName : String
    + SensorTypeName(...)
    + getSensorTypeName() : String
    + sameAs(Object): boolean
}

class SensorTypeUnit{
    - sensorTypeUnit : String
    + SensorTypeUnit(...)
    + getSensorTypeUnit() : String
    + sameAs(Object): boolean
}

class SensorModel{
    + SensorModel(...)
    + getIdentity() : SensorModelName
    + getSensorTypeId() : SensorTypeId
    + sameAs(Object): boolean
}

class SensorTypeId{
    - sensorTypeId : String
    + SensorTypeId(...)
    + getSensorTypeId() : String
    + sameAs(Object): boolean
}

class DeviceId{
    - deviceId : String
    + DeviceId(...)
    + getIdentity() : String
}

interface ISensorRepository {
    + save(...) : Sensor
    + findAll() : Iterable<Sensor>
    + findByIdentity(...) : Optional<Sensor>
    + containsIdentity(...) : boolean
    + findSensorsByDeviceId(...) : Iterable<Sensor>
    + findSensorsByDeviceIdAndSensorModelName(...) : Iterable<Sensor>
    + findSensorIdsByDeviceIdAndSensorModelName(...) : Iterable<SensorId>
}

interface ISensorTypeRepository {
    + save(...) : SensorType
    + findAll() : Iterable<SensorType>
    + findByIdentity(...) : Optional<SensorType>
    + containsIdentity(...) : boolean
    + findSensorTypeIds() : Iterable<SensorTypeId>
}

interface ISensorModelRepository {
    + save(...) : SensorModel
    + findAll() : Iterable<SensorModel>
    + findByIdentity(...) : Optional<SensorModel>
    + containsIdentity(...) : boolean
    + findSensorModelsBySensorTypeId(...) : Iterable<SensorModel>
    + findSensorModelNamesBySensorTypeId(...) : Iterable<SensorModelName>
}

class SensorOfPowerConsumption {
    + SensorOfPowerConsumption()
    + getIdentity() : SensorId
    + getSensorModelName() : SensorModelName
    + getValue() : Value
    + getDeviceId() : DeviceId
    + sameAs(Object): boolean
}

PowerConsumptionValue ..|> Value : " implements"

SensorOfPowerConsumption ..|> Sensor : " implements"
SensorOfPowerConsumption "1" *-- "1" SensorId : contains
SensorOfPowerConsumption ..> Value :  creates
SensorOfPowerConsumption "1" --> "1" SensorModelName : knows
SensorOfPowerConsumption "1" --> "1" DeviceId : knows

SensorModel "1" *-- "1" SensorModelName : contains
SensorModel "1" --> "1" SensorTypeId : knows

SensorType "1" *-- "1" SensorTypeId: contains
SensorType "1" *-- "1" SensorTypeName : contains
SensorType "1" *-- "1" SensorTypeUnit : contains

SensorRepository "1" *-- "*" SensorOfPowerConsumption : contains
SensorTypeRepository "1" *-- "*" SensorType : contains
SensorModelRepository "1" *-- "*" SensorModel : contains


@enduml